checked ble feature, made network fragment

--- a/res/layout/dialog_serialno.xml
+++ b/res/layout/dialog_serialno.xml
@@ -33,7 +33,8 @@
             android:layout_width="250px"
             android:layout_height="40px"
             android:textSize="15px"
-            android:text="002609"
+            android:text=""
+            android:hint="Please input serial number"
             android:padding="4dp"
             />
 
