--- a/res/layout/fragment_network.xml
+++ b/res/layout/fragment_network.xml
@@ -8,19 +8,25 @@
     <RelativeLayout
             android:id="@+id/rl_statusmonitor"
             android:layout_width="320px"
-            android:layout_height="64px">
+            android:layout_height="64px"
+            android:background="@android:color/transparent"
+            >
     </RelativeLayout>
 
     <LinearLayout
             android:layout_below="@id/rl_statusmonitor"
+            android:layout_marginTop="3px"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:id="@+id/rl_segment"
+            android:padding="0dp"
+            android:background="@android:color/transparent"
             >
         <Button
                 android:id="@+id/btn_type1"
-                android:layout_marginLeft="3px"
+                android:layout_marginLeft="6px"
                 android:layout_width="102px"
                 android:layout_height="40px"
                 android:background="@drawable/roundleftblueblue_layout"
@@ -55,13 +61,23 @@
                 />
     </LinearLayout>
 
+    <RelativeLayout
+            android:id="@+id/rl_settings"
+            android:layout_marginTop="104px"
+            android:layout_width="320px"
+            android:layout_height="128px"
+            android:background="@android:color/transparent"
+            >
+    </RelativeLayout>
+
     <ListView
-      android:id="@+id/band_list"
-      android:layout_below="@id/rl_segment"
-      android:layout_marginTop="10px"
-      android:orientation="vertical"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
+            android:id="@+id/device_list"
+            android:layout_below="@id/rl_settings"
+            android:layout_marginTop="5px"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="285px"
+            android:background="@android:color/transparent"
             />
 
 </RelativeLayout>
