--- a/res/layout/dialog_genericmodalyesno.xml
+++ b/res/layout/dialog_genericmodalyesno.xml
@@ -31,7 +31,7 @@
         android:layout_width="100px"
         android:layout_height="30px"
         android:background="@drawable/save_changes_button"
-        android:text="Continue"
+        android:text="Cancel"
         android:textColor="#ffffff"
         android:textSize="12px"
         android:padding="0dp"
