implemented scenario to mimic iOS

--- a/res/layout/dialog_serialno.xml
+++ b/res/layout/dialog_serialno.xml
@@ -32,6 +32,10 @@
             android:layout_marginLeft="20px"
             android:layout_width="250px"
             android:layout_height="40px"
+            android:digits="ABCDEFabcdef0123456789"
+            android:singleLine="true"
+            android:inputType="text"
+            android:ems="10"
             android:textSize="15px"
             android:text=""
             android:hint="Please input serial number"
