--- a/res/layout/activity_terms.xml
+++ b/res/layout/activity_terms.xml
@@ -1,11 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@android:color/black"
     android:id="@+id/layout_parent"
         >
@@ -15,6 +11,7 @@
             android:layout_marginLeft="5px"
             android:layout_marginRight="5px"
             android:layout_marginTop="5px"
+            android:padding="16dp"
             android:id="@+id/rlGallery"
             >
         <view android:layout_width="fill_parent"
@@ -31,7 +28,7 @@
             <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:text="By using the [System] the user acknowledges and agrees that it is designed soley to:\n(i) monitor electronically the immersion of monitored persons in the water in order to signal that a moment has ccurred when a monitored persion may be at risk of drowning,\n(ii) to assist responsible adults supervising monitored persons in or near the water, and \n(iii) the [System] is not itself a life saving device and cannot alone prevent drowning.\n - Wahooo iSwimband is a submersion timer \n - Wahooo iSwimband is not a supervisor \n - Wahooo iSwimband is not a life-saving device"
+                    android:text="By using the [System] the user acknowledges and agrees that it is designed soley to:\n(i) monitor electronically the immersion of monitored persons in the water in order to signal that a moment has ccurred when a monitored persion may be at risk of drowning,\n(ii) to assist responsible adults supervising monitored persons in or near the water, and \n(iii) the [System] is not itself a life saving device and cannot alone prevent drowning.\n - iSwimband is a submersion timer \n - iSwimband is not a supervisor \n - iSwimband is not a life-saving device"
                     android:padding="5dp"
                     android:textSize="14px"
                     android:textColor="@color/for_terms"
@@ -65,7 +62,8 @@
 
         <RelativeLayout
                 android:id="@+id/rlThird"
-                android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="visible">
+                android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="visible"
+                >
             <TextView
                     android:id="@+id/text_ensurenotification"
                     android:layout_width="fill_parent"
@@ -98,6 +96,37 @@
         </RelativeLayout>
 
 
+    </RelativeLayout>
+
+    <RelativeLayout
+            android:layout_marginTop="480px"
+            android:layout_width="fill_parent"
+            android:layout_height="30px"
+            >
+        <ImageView
+                android:layout_marginLeft="120px"
+                android:layout_marginTop="0px"
+                android:layout_width="7px"
+                android:layout_height="10px"
+                android:background="@drawable/icon_circle_selected"
+                android:id="@+id/ivCircle1"
+                />
+        <ImageView
+                android:layout_marginLeft="148px"
+                android:layout_marginTop="0px"
+                android:layout_width="7px"
+                android:layout_height="10px"
+                android:background="@drawable/icon_circle_nonselected"
+                android:id="@+id/ivCircle2"
+                />
+        <ImageView
+                android:layout_marginLeft="176px"
+                android:layout_marginTop="0px"
+                android:layout_width="7px"
+                android:layout_height="10px"
+                android:background="@drawable/icon_circle_nonselected"
+                android:id="@+id/ivCircle3"
+                />
     </RelativeLayout>
 
 </RelativeLayout>
