--- a/res/layout/activity_terms.xml
+++ b/res/layout/activity_terms.xml
@@ -102,9 +102,13 @@
             android:layout_marginTop="480px"
             android:layout_width="fill_parent"
             android:layout_height="30px"
+            android:gravity="center"
             >
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <ImageView
-                android:layout_marginLeft="120px"
+                android:layout_marginLeft="0px"
                 android:layout_marginTop="0px"
                 android:layout_width="7px"
                 android:layout_height="10px"
@@ -112,7 +116,7 @@
                 android:id="@+id/ivCircle1"
                 />
         <ImageView
-                android:layout_marginLeft="148px"
+                android:layout_marginLeft="28px"
                 android:layout_marginTop="0px"
                 android:layout_width="7px"
                 android:layout_height="10px"
@@ -120,13 +124,14 @@
                 android:id="@+id/ivCircle2"
                 />
         <ImageView
-                android:layout_marginLeft="176px"
+                android:layout_marginLeft="56px"
                 android:layout_marginTop="0px"
                 android:layout_width="7px"
                 android:layout_height="10px"
                 android:background="@drawable/icon_circle_nonselected"
                 android:id="@+id/ivCircle3"
                 />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
